# sdlgame

./: CMakeLists.txt  README.md
src/: Entity.cpp  Game.cpp  Game.hpp  main.cpp
